--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav id="navigation"></nav>
+    </header>
     <main>
         <section id="felipe"></section>
         <section id="francisco"></section>
