--- a/index.html
+++ b/index.html
@@ -1,22 +1,96 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header>
         <nav id="navigation"></nav>
     </header>
     <main>
         <section id="felipe"></section>
-        <section id="francisco"></section>
+        <section id="francisco">
+
+            <div id="piqueno">
+
+                <div class="slider">
+
+                    <div class="slides">
+
+                        <input type="radio" name="radio-btn" id="radio1">
+
+                        <input type="radio" name="radio-btn" id="radio2">
+
+                        <input type="radio" name="radio-btn" id="radio3">
+
+                        <input type="radio" name="radio-btn" id="radio4">
+
+
+
+                        <div class="slide first">
+
+                            <img src="pizza.webp" alt="0" height="100" width="200">
+
+                        </div>
+
+                        <div class="slide">
+
+                            <img src="38.png" alt="0" width="200" height="200">
+
+                        </div>
+
+                        <div class="slide">
+
+                            <img src="a86e1ae5715d3f92df2cccfbd60d29d0.png" alt="0" width="200" height="200">
+
+                        </div>
+
+                        <div class="navigation-auto">
+
+                            <div class="auto-btn1">
+
+                                <div class="auto-btn2">
+
+                                </div>
+
+                                <div class="auto-btn3"></div>
+
+
+
+                            </div>
+
+                        </div>
+
+                        <div class="manual-navigation">
+
+                            <label for="radio1" class="manual-btn"></label>
+
+                            <label for="radio2" class="manual-btn"></label>
+
+                            <label for="radio3" class="manual-btn"></label>
+
+                        </div>
+
+
+
+                    </div>
+
+
+
+                </div>
+
+            </div>
+        </section>
         <section id="joao"></section>
     </main>
     <footer></footer>
 
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
