--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <main>
         <section id="felipe"></section>
         <section id="francisco"></section>
-        <section id="joao"></section>
+        <section id="joao">
+            <h3 >Nossa missão:</h3>
+            <p id="pr">A nossa empressa tem a missão de eradicar com a fome no mundo atraves do aumento de qualidade da comida,diminuição do preço e aumento da ascessibilidade</p>
+            <h3>Visão:</h3>
+            <p>contribuir para um mundo sem fome</3p>
+            <h3>valores:</h3>
+            <p>qualidade,desenvolvimento,foco e humanidade</p>
+        </section>
     </main>
     <footer></footer>
 
