--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         <section id="francisco"></section>
         <section id="joao"></section>
     </main>
-    <footer></footer>
+    <footer>  <a href="">Politica de Privacidade</a>
+        <a href="">Seja um Franqueado</a>
+        <a href="">Trabalhe Conosco</a>
+        <a href="">Sobre Nós</a>
+        <a href="">App Yummy</a>
+        <br><br><hr><br><br>
+        <h2>Nossas Redes Sociais</h2>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/1936/1936319.png" alt=""></a>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/1077/1077041.png" alt=""></a>
+        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2111/2111819.png" alt=""></a>
+    </footer>
 
     <script src="./assets/js/script.js"></script>
 </body>
