--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
+
 <body>
     <header>
-        <nav id="navigation"></nav>
+        <nav id="navigation">
+            <h1><a href="#">Yummy - Food printing</a></h1>
+            <i id="menuIcon" class="fas fa-bars"></i>
+            <ul id="navigationList">
+                <li class="navigationItems">
+                    <a class="navigationLinks" href="#">Início</a>
+                </li>
+                <li class="navigationItems">
+                    <a href="#" class="navigationLinks">Produtos</a>
+                </li>
+                <li class="navigationItems">
+                    <a href="#" class="navigationLinks">Sobre</a>
+                </li>
+                <li class="navigationItems">
+                    <a href="#" class="navigationLinks">Contato</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="felipe"></section>
@@ -19,4 +39,5 @@
 
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
