--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
         <section id="felipe"></section>
         <section id="francisco"></section>
         <section id="joao">
-            <h3 >Nossa missão:</h3>
-            <p id="pr">A nossa empressa tem a missão de eradicar com a fome no mundo atraves do aumento de qualidade da comida,diminuição do preço e aumento da ascessibilidade</p>
-            <h3>Visão:</h3>
-            <p>contribuir para um mundo sem fome</3p>
-            <h3>valores:</h3>
-            <p>qualidade,desenvolvimento,foco e humanidade</p>
+            <div id="bolota1">
+                <h3>Missão:</h3>
+                <p>“Acabar com a fome do mundo aumentando a distribuição de alimentos e facilitando o acesso a população mais carente.” </p>
+            </div>
+            <div id="bolota2">
+                <h3>Visão:</h3>
+                <p>“Contribuir para um futuro sem fome facilitando acesso de alimentos as regiões mais pobres e diminuindo os custos, mas sempre mantendo a mesma qualidade”. </p>
+            </div>
+            <div id="bolota3">
+                <h3>Valores:</h3>
+                <p> Qualidade, desenvolvimento, foco no cliente, humanização. </p>
+            </div> 
         </section>
     </main>
     <footer></footer>
