QUASE ESQUECIDO COMMIT OMAGAAAA

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
                         <div class="slide first">
 
-                            <img src="pizza.webp" alt="0" height="100" width="200">
+                            <img src="equipamentos-para-pizzaria-delivery-e-solucao-digital.png" alt="0" height="100" width="200">
 
                         </div>
 
                         <div class="slide">
 
-                            <img src="38.png" alt="0" width="200" height="200">
+                            <img src="burger-street-food-digital-illustration-png.png" alt="0" width="200" height="200">
 
                         </div>
 
                         <div class="slide">
 
-                            <img src="a86e1ae5715d3f92df2cccfbd60d29d0.png" alt="0" width="200" height="200">
+                            <img src="coffee-machine-coffee-shop-3d-render-digital-illustration-of-a-coffee-maker-front-view-of-a-brown-coffee-machine-brewing-espresso-in-two-glasses-3d-rendering-png.png" alt="0" width="200" height="200">
 
                         </div>
 
