--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <nav id="navigation"></nav>
     </header>
     <main>
-        <section id="felipe"></section>
+        <section id="felipe">
+            <video src="./SnapInsta.io-Star Trek replicator.mp4" autoplay muted loop></video>
+        </section>
         <section id="francisco"></section>
         <section id="joao"></section>
     </main>
