--- a/index.html
+++ b/index.html
@@ -15,16 +15,30 @@
         <section id="francisco"></section>
         <section id="joao"></section>
     </main>
-    <footer>  <a href="">Politica de Privacidade</a>
+    <footer> <div id="riri">
+         <a href="">Politica de Privacidade</a>
         <a href="">Seja um Franqueado</a>
         <a href="">Trabalhe Conosco</a>
+        <p>
         <a href="">Sobre Nós</a>
         <a href="">App Yummy</a>
-        <br><br><hr><br><br>
-        <h2>Nossas Redes Sociais</h2>
-        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/1936/1936319.png" alt=""></a>
-        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/1077/1077041.png" alt=""></a>
-        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/2111/2111819.png" alt=""></a>
+    </p>
+            </div>  
+        <br><br>
+        <div id="ca"><hr></div>
+        <br><br>
+      <div id="oo"> 
+         <h2>Nossas Redes Sociais</h2>
+    </div>
+       <br><br>
+        <a href=""><div id="po"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt=""></div></a>
+        <a href=""><div id="oi"><img src="https://img.freepik.com/icones-gratis/facebook_318-566730.jpg" alt=""></div></a>
+        <a href=""> <div id="opa"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png" alt=""></div></a>
+        <br><br>
+        <div id="ee"><h5>
+            Todos os direitos reservados.Imagens meramente ilustrativas. Consulte os restaurantes participantes. TM & © 2021 Yammy Corporation. 
+        </h5>
+    </div>
     </footer>
 
     <script src="./assets/js/script.js"></script>
