--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
         <section id="francisco"></section>
         <section id="joao"></section>
     </main>
-    <footer> <div id="riri">
-         <a href="">Politica de Privacidade</a>
-        <a href="">Seja um Franqueado</a>
+    <footer> <br> 
+       <div id="rt">
+        <img src="Logos Yummy - Food Printing.png" alt="">
+        </div>
+        <div id="riri">
+         <a href="">Politica de Privacidade-</a>
+        <a href="">Seja um Franqueado-</a>
         <a href="">Trabalhe Conosco</a>
-        <p>
-        <a href="">Sobre Nós</a>
+    </div>
+       <div id="popl">
+         <p> 
+        <a href="">Sobre Nós-</a>
         <a href="">App Yummy</a>
     </p>
             </div>  
