--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                 </div>
 
             </div>
+
+            <div id="balacobaco">
+                <h2>Veja nosso cardápio e faça já o seu pedido!</h2>
+                <a href="cardápio.html">Cardápio</a>
+
+            </div>
         </section>
         <section id="joao"></section>
     </main>
