--- a/index.html
+++ b/index.html
@@ -106,8 +106,17 @@
             </div>
 
             <div id="balacobaco">
-                <h2>Veja nosso cardápio e faça já o seu pedido!</h2>
-                <a href="cardápio.html">Cardápio</a>
+               <h2>Sobre nós.</h2>
+               <h4>Nossa empresa consiste em conseguir mudar a fome em volta do mundo. Temos nossas políticas, porém nunca
+                rigidas ou corrupitas. Temos lojas em torno de alguns países, para ajudar a fome zero.
+                Ainda não somos grandes o suficiente, mas vamos crescer cada vez mais, para que todos possamos passar dessa terrível fase.
+                </h4>
+                <h2>
+                    <h4>
+                Somos capazes se vocês nos ajudarem, seremos mais rápidos e gratos.
+                Aproveite e doe suas receitas, seus gostos, e nos deem sugestões sobre comidas. Iremos imprimir elas.
+            </h4>
+               
 
             </div>
         </section>
