--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section id="francisco">
 
-            <div id="piqueno">
+            <div class="piqueno">
 
                 <div class="slider">
 
@@ -53,7 +53,8 @@
 
                         <div class="slide first">
 
-                            <img src="equipamentos-para-pizzaria-delivery-e-solucao-digital.png" alt="0" height="100" width="200">
+                            <img src="equipamentos-para-pizzaria-delivery-e-solucao-digital.png" alt="0" height="100"
+                                width="200">
 
                         </div>
 
@@ -65,7 +66,8 @@
 
                         <div class="slide">
 
-                            <img src="coffee-machine-coffee-shop-3d-render-digital-illustration-of-a-coffee-maker-front-view-of-a-brown-coffee-machine-brewing-espresso-in-two-glasses-3d-rendering-png.png" alt="0" width="200" height="200">
+                            <img src="coffee-machine-coffee-shop-3d-render-digital-illustration-of-a-coffee-maker-front-view-of-a-brown-coffee-machine-brewing-espresso-in-two-glasses-3d-rendering-png.png"
+                                alt="0" width="200" height="200">
 
                         </div>
 
@@ -104,71 +106,131 @@
                 </div>
 
             </div>
-
+            <br>
+            <br>
             <div id="balacobaco">
-               <h2>Sobre nós.</h2>
-               <h4>Nossa empresa consiste em conseguir mudar a fome em volta do mundo. Temos nossas políticas, porém nunca
-                rigidas ou corrupitas. Temos lojas em torno de alguns países, para ajudar a fome zero.
-                Ainda não somos grandes o suficiente, mas vamos crescer cada vez mais, para que todos possamos passar dessa terrível fase.
-                </h4>
-                <h2>
-                    <h4>
-                Somos capazes se vocês nos ajudarem, seremos mais rápidos e gratos.
-                Aproveite e doe suas receitas, seus gostos, e nos deem sugestões sobre comidas. Iremos imprimir elas.
-            </h4>
-               
+                <br>
+                <br>
+                <h2>SOBRE NÓS.</h2>
+                <p>Nossa empresa consiste em conseguir mudar a fome em volta do mundo. Temos nossas políticas, porém
+                    nunca
+                    rigidas ou corrupitas. Temos lojas em torno de alguns países, para ajudar a fome zero.
+                    Ainda não somos grandes o suficiente, mas vamos crescer cada vez mais, para que todos possamos
+                    passar dessa terrível fase.
+                </p>
+                <br>
+
+                <h2>PROPAGANDA</h2>
+                <p style="text-align: center;">
+                    Somos capazes se vocês nos ajudarem, seremos mais rápidos e gratos.
+                    Aproveite e doe suas receitas, seus gostos, e nos deem sugestões sobre comidas. Iremos imprimir
+                    elas.
+                    Essa luta não é apenas nossa, é de todos. Para um mundo sem fome, Yummy.
+
+                </p>
+                <br>
+                <br>
 
             </div>
-        </section>
-        <section id="joao"></section>
+            <br>
+            <br>
+            <br>
+            <div class="LoginAccount" style="text-align: center; text-decoration: none;">
+                        <img src="grafico-vetorial-de-ilustracao-do-icone-do-usuario_717549-1624.png" alt="0" height="300" width="300">
+                            <br>
+                            <a href="Login.html" style="font-size: 20px; text-decoration: none; color: rgb(112, 0, 218);">Faça seu Login em nosso site!</a>
+                            <br>
+                            <br>
+                            <img src="grafico-vetorial-de-ilustracao-do-icone-do-usuario_717549-1628.png" alt="0" height="300" width="300">
+                            <br>
+                            <a href="NewAccount.html" style="text-align: center; text-decoration: none; font-size: 20px; color: rgb(112, 0, 218);">Não tem uma conta? Hm.. Registre-se!</a>
+                            
+            </div>
 
-        <section id="francisco"></section>
+        </section>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+        <section id="joao"></section>
         <section id="joao">
             <div id="bolota1">
                 <h3>Missão:</h3>
-                <p>“Acabar com a fome do mundo aumentando a distribuição de alimentos e facilitando o acesso a população mais carente.” </p>
+                <p>“Acabar com a fome do mundo aumentando a distribuição de alimentos e facilitando o acesso a população
+                    mais carente.” </p>
             </div>
             <div id="bolota2">
                 <h3>Visão:</h3>
-                <p>“Contribuir para um futuro sem fome facilitando acesso de alimentos as regiões mais pobres e diminuindo os custos, mas sempre mantendo a mesma qualidade”. </p>
+                <p>“Contribuir para um futuro sem fome facilitando acesso de alimentos as regiões mais pobres e
+                    diminuindo os custos, mas sempre mantendo a mesma qualidade”. </p>
             </div>
             <div id="bolota3">
                 <h3>Valores:</h3>
                 <p> Qualidade, desenvolvimento, foco no cliente, humanização. </p>
-            </div> 
+            </div>
         </section>
 
     </main>
-    <footer> <br> 
-       <div id="rt">
-        <img src="Logos Yummy - Food Printing.png" alt="">
+    <footer> <br>
+        <div id="rt">
+            <img src="Logos Yummy - Food Printing.png" alt="">
         </div>
         <div id="riri">
-         <a href="">Politica de Privacidade-</a>
-        <a href="">Seja um Franqueado-</a>
-        <a href="">Trabalhe Conosco</a>
-    </div>
-       <div id="popl">
-         <p> 
-        <a href="">Sobre Nós-</a>
-        <a href="">App Yummy</a>
-    </p>
-            </div>  
+            <a href="">Politica de Privacidade-</a>
+            <a href="">Seja um Franqueado-</a>
+            <a href="">Trabalhe Conosco</a>
+        </div>
+        <div id="popl">
+            <p>
+                <a href="">Sobre Nós-</a>
+                <a href="">App Yummy</a>
+            </p>
+        </div>
         <br><br>
-        <div id="ca"><hr></div>
+        <div id="ca">
+            <hr>
+        </div>
         <br><br>
-      <div id="oo"> 
-         <h2>Nossas Redes Sociais</h2>
-    </div>
-       <br><br>
-        <a href=""><div id="po"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt=""></div></a>
-        <a href=""><div id="oi"><img src="https://img.freepik.com/icones-gratis/facebook_318-566730.jpg" alt=""></div></a>
-        <a href=""> <div id="opa"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png" alt=""></div></a>
+        <div id="oo">
+            <h2>Nossas Redes Sociais</h2>
+        </div>
         <br><br>
-        <div id="ee"><h5>
-            Todos os direitos reservados.Imagens meramente ilustrativas. Consulte os restaurantes participantes. TM & © 2021 Yammy Corporation. 
-        </h5>
-    </div>
+        <a href="">
+            <div id="po"> <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png"
+                    alt=""></div>
+        </a>
+        <a href="">
+            <div id="oi"><img src="https://img.freepik.com/icones-gratis/facebook_318-566730.jpg" alt=""></div>
+        </a>
+        <a href="">
+            <div id="opa"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png" alt=""></div>
+        </a>
+        <br><br>
+        <div id="ee">
+            <h5>
+                Todos os direitos reservados.Imagens meramente ilustrativas. Consulte os restaurantes participantes. TM
+                & © 2021 Yammy Corporation.
+            </h5>
+        </div>
     </footer>
 
     <script src="./assets/js/script.js"></script>
