Detalhes e páginas extras

--- a/franqueado.html
+++ b/franqueado.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yummy | A inovação começa na alimentação</title>
+    <title>Yummy | Seja um Franqueado</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -17,13 +17,13 @@
             <i id="menuIcon" class="fas fa-bars"></i>
             <ul id="navigationList">
                 <li class="navigationItems">
-                    <a href="#felipe" class="navigationLinks">Início</a>
+                    <a href="./index.html#" class="navigationLinks">Início</a>
                 </li>
                 <li class="navigationItems">
-                    <a href="#francisco" class="navigationLinks">Produtos</a>
+                    <a href="./index.html#francisco" class="navigationLinks">Produtos</a>
                 </li>
                 <li class="navigationItems">
-                    <a href="#joao" class="navigationLinks">Sobre</a>
+                    <a href="./index.html#joao" class="navigationLinks">Sobre</a>
                 </li>
                 <li class="navigationItems">
                     <a href="#ee" class="navigationLinks">Contato</a>
@@ -31,31 +31,22 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="felipe"></section>
-        <section id="francisco"></section>
-        <section id="joao">
-            <div id="bolota1">
-                <h3>Missão:</h3>
-                <p>“Acabar com a fome do mundo aumentando a distribuição de alimentos e facilitando o acesso a população mais carente.” </p>
-            </div>
-            <div id="bolota2">
-                <h3>Visão:</h3>
-                <p>“Contribuir para um futuro sem fome facilitando acesso de alimentos as regiões mais pobres e diminuindo os custos, mas sempre mantendo a mesma qualidade”. </p>
-            </div>
-            <div id="bolota3">
-                <h3>Valores:</h3>
-                <p> Qualidade, desenvolvimento, foco no cliente, humanização. </p>
-            </div> 
-        </section>
+
+    <main class="pers1">
+        <img src="franquia.png" alt="">
+        <h1>Diminuindo a fome e aumentando rendimentos</h1>
+        <p>Focado em inovações e baseado no perfil do consumidor moderno, no novo conceito onde a fome não é mais um problema.</p>
+        <p>Temos diversos modelos de negócio que se adaptam a diferentes espaços, densidades demográficas e regiões geográficas. São ideais para cidades a partir de 100 mil habitantes.</p>
+        <button>Faça sua candidatura</button>
     </main>
+
     <footer> <br> 
         <div id="rt">
             <img src="Logos Yummy - Food Printing.png" alt="">
         </div>
         <div id="riri">
             <a href="./privacidade.html">Politica de Privacidade-</a>
-            <a href="./franqueado.html">Seja um Franqueado-</a>
+            <a href="#navigation">Seja um Franqueado-</a>
             <a href="./trabalhe.html">Trabalhe Conosco</a>
         </div>
         <div id="popl">
@@ -79,7 +70,7 @@
             </h5>
         </div>
     </footer>
-
+    
     <script src="./assets/js/script.js"></script>
 </body>
 
