--- a/trabalhe.html
+++ b/trabalhe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yummy | A inovação começa na alimentação</title>
+    <title>Yummy | Trabalhe Conosco</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -17,13 +17,13 @@
             <i id="menuIcon" class="fas fa-bars"></i>
             <ul id="navigationList">
                 <li class="navigationItems">
-                    <a href="#felipe" class="navigationLinks">Início</a>
+                    <a href="./index.html" class="navigationLinks">Início</a>
                 </li>
                 <li class="navigationItems">
-                    <a href="#francisco" class="navigationLinks">Produtos</a>
+                    <a href="./index.html#francisco" class="navigationLinks">Produtos</a>
                 </li>
                 <li class="navigationItems">
-                    <a href="#joao" class="navigationLinks">Sobre</a>
+                    <a href="./index.html#joao" class="navigationLinks">Sobre</a>
                 </li>
                 <li class="navigationItems">
                     <a href="#ee" class="navigationLinks">Contato</a>
@@ -31,24 +31,39 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="felipe"></section>
-        <section id="francisco"></section>
-        <section id="joao">
-            <div id="bolota1">
-                <h3>Missão:</h3>
-                <p>“Acabar com a fome do mundo aumentando a distribuição de alimentos e facilitando o acesso a população mais carente.” </p>
-            </div>
-            <div id="bolota2">
-                <h3>Visão:</h3>
-                <p>“Contribuir para um futuro sem fome facilitando acesso de alimentos as regiões mais pobres e diminuindo os custos, mas sempre mantendo a mesma qualidade”. </p>
-            </div>
-            <div id="bolota3">
-                <h3>Valores:</h3>
-                <p> Qualidade, desenvolvimento, foco no cliente, humanização. </p>
-            </div> 
-        </section>
+    
+    <main id="trab" class="pers1">
+        <img src="business.png" alt="">
+        <h1>Quer trabalhar na maior empresa de inovação e tecnologia do Brasil?</h1>
+        <p>A Yummy tem vagas abertas para você que quer se desafiar e, a cada dia, se apaixonar pelo nosso propósito! Todas as pessoas são bem vindas para contribuir com um crescimento ainda mais sustentável e sem fome.</p>
+        <p>Escolha sua vaga e venha fazer parte da equipe!</p><br>
+        <div class="vaga">
+            <h2>Analista de Infraestrutura de TI</h2>
+            <h3>Porto Alegre - RS</h3>
+            <h4>Integral</h4>
+        </div>
+        <div class="vaga">
+            <h2>Assistente de Backoffice</h2>
+            <h3>Porto Alegre - RS</h3>
+            <h4>Estágio</h4>
+        </div>
+        <div class="vaga">
+            <h2>Aprendiz</h2>
+            <h3>Campinas - SP</h3>
+            <h4>Aprendiz</h4>
+        </div>
+        <div class="vaga">
+            <h2>Técnico em Nutrição</h2>
+            <h3>Campinas - SP</h3>
+            <h4>Integral</h4>
+        </div>
+        <div class="vaga">
+            <h2>Banco de Talentos - PCD</h2>
+            <h3>Porto Alegre - RS</h3>
+            <h4>Banco</h4>
+        </div>
     </main>
+
     <footer> <br> 
         <div id="rt">
             <img src="Logos Yummy - Food Printing.png" alt="">
@@ -56,7 +71,7 @@
         <div id="riri">
             <a href="./privacidade.html">Politica de Privacidade-</a>
             <a href="./franqueado.html">Seja um Franqueado-</a>
-            <a href="./trabalhe.html">Trabalhe Conosco</a>
+            <a href="#navigation">Trabalhe Conosco</a>
         </div>
         <div id="popl">
             <a href="">Sobre Nós-</a>
