--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#francisco" class="navigationLinks">Produtos</a>
                 </li>
                 <li class="navigationItems">
-                    <a href="#joao" class="navigationLinks">Sobre</a>
+                    <a href="#balacobaco" class="navigationLinks">Sobre</a>
                 </li>
                 <li class="navigationItems">
                     <a href="#ee" class="navigationLinks">Contato</a>
@@ -204,9 +204,9 @@
         </div>
         <div id="riri">
 
-            <a href="">Politica de Privacidade-</a>
-            <a href="">Seja um Franqueado-</a>
-            <a href="">Trabalhe Conosco</a>
+            <a href="./privacidade.html">Politica de Privacidade-</a>
+            <a href="franqueado.html">Seja um Franqueado-</a>
+            <a href="./trabalhe.html">Trabalhe Conosco</a>
         </div>
         <div id="popl">
             <p>
@@ -214,15 +214,6 @@
                 <a href="">App Yummy</a>
             </p>
         </div>
-
-            <a href="./privacidade.html">Politica de Privacidade-</a>
-            <a href="./franqueado.html">Seja um Franqueado-</a>
-            <a href="./trabalhe.html">Trabalhe Conosco</a>
-        </div>
-        <div id="popl">
-            <a href="">Sobre Nós-</a>
-            <a href="">App Yummy</a>
-        </div>  
 
         <br><br>
         <div id="ca">
@@ -250,20 +241,6 @@
             <h5>
                 Todos os direitos reservados.Imagens meramente ilustrativas. Consulte os restaurantes participantes. TM
                 & © 2021 Yammy Corporation.
-
-        <div id="oo"> 
-            <h2>Nossas Redes Sociais</h2>
-        </div>
-        <br><br>
-        <a href=""><div id="po"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt=""></div></a>
-        <a href=""><div id="oi"><img src="https://img.freepik.com/icones-gratis/facebook_318-566730.jpg" alt=""></div></a>
-        <a href=""> <div id="opa"><img src="https://cdn-icons-png.flaticon.com/512/124/124021.png" alt=""></div></a>
-        <br><br>
-        <div id="ee">
-            <h5>
-                Todos os direitos reservados.Imagens meramente ilustrativas. Consulte os restaurantes participantes. TM & © 2021 Yammy Corporation. 
-
-            </h5>
         </div>
     </footer>
 
